<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bonewhite"
    tools:context=".Plan2DiscoverFragment">

    <LinearLayout
        android:id="@+id/abd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <TextView
                android:id="@+id/txtplan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Premium Plan"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/_30sdp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:src="@mipmap/premiumbtn" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="start"
                        android:paddingTop="@dimen/_4sdp"
                        android:singleLine="true"
                        android:text="@string/psub11"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginVertical="@dimen/_8sdp"
                    android:background="@color/mnoyellow" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:src="@mipmap/premiumbtn" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="start"
                        android:paddingTop="@dimen/_4sdp"
                        android:singleLine="true"
                        android:text="@string/psub2"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginVertical="@dimen/_8sdp"
                    android:background="@color/mnoyellow" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:src="@mipmap/premiumbtn" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="start"
                        android:paddingTop="@dimen/_4sdp"
                        android:singleLine="true"
                        android:text="@string/psub3"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginVertical="@dimen/_8sdp"
                    android:background="@color/mnoyellow" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:src="@mipmap/premiumbtn" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="start"
                        android:paddingTop="@dimen/_4sdp"
                        android:singleLine="true"
                        android:text="@string/psub4"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginVertical="@dimen/_8sdp"
                    android:background="@color/mnoyellow" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:src="@mipmap/premiumbtn" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="start"
                        android:paddingTop="@dimen/_4sdp"
                        android:singleLine="true"
                        android:text="@string/psub5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginVertical="@dimen/_8sdp"
                    android:background="@color/mnoyellow" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:src="@mipmap/premiumbtn" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="start"
                        android:paddingTop="@dimen/_4sdp"
                        android:singleLine="true"
                        android:text="@string/psub6"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginVertical="@dimen/_8sdp"
                    android:background="@color/mnoyellow" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:src="@mipmap/premiumbtn" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="start"
                        android:paddingTop="@dimen/_4sdp"
                        android:singleLine="true"
                        android:text="@string/psub7"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginVertical="@dimen/_8sdp"
                    android:background="@color/mnoyellow" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:src="@mipmap/premiumbtn" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="start"
                        android:paddingTop="@dimen/_4sdp"
                        android:singleLine="true"
                        android:text="@string/psub8"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginVertical="@dimen/_8sdp"
                    android:background="@color/mnoyellow" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:src="@mipmap/premiumbtn" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="start"
                        android:paddingTop="@dimen/_4sdp"
                        android:singleLine="true"
                        android:text="@string/psub9"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginVertical="@dimen/_8sdp"
                    android:background="@color/mnoyellow" />


            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>





    </LinearLayout>


</androidx.core.widget.NestedScrollView>